--- a/src/assets/css/potal/signup.css
+++ b/src/assets/css/potal/signup.css
@@ -9,7 +9,7 @@
     
 }
 
-.signup-box {
+#signup-container  .signup-box {
     margin: 50px 0 20px 0;
     width: 450px;
     padding: 60px;
@@ -20,8 +20,13 @@
     align-items: center;
     flex-direction: column;
 }
+#signup-container  .signup-box .con-logo{
+    height: 90px;
+    object-fit: contain;
+    margin-bottom: 20px;
+}
 
-.signup-form {
+#signup-container  .signup-form {
     margin-top: 20px;
     width: 100%;
 }
