--- a/src/assets/css/manager/schedule.css
+++ b/src/assets/css/manager/schedule.css
@@ -1,72 +1,171 @@
 @charset "UTF-8";
 
 .swal2-container {
-    z-index: 9999; /* 스위트알림 팝업의 z-index를 높게 설정 */
+    z-index: 9999;
+    /* 스위트알림 팝업의 z-index를 높게 설정 */
 }
 
 .calendar-container {
-    position: relative; /* 상대 위치 지정 */
-    z-index: 1; /* FullCalendar 컴포넌트의 위에 표시 */
+    position: relative;
+    /* 상대 위치 지정 */
+    z-index: 1;
+    /* FullCalendar 컴포넌트의 위에 표시 */
     margin: 20px auto;
-    max-width: 1400px; /* 더 작은 사이즈로 변경 */
+    max-width: 1400px;
+    /* 더 작은 사이즈로 변경 */
     padding: 20px;
-    border: 5px solid hsl(37, 91%, 67%); /* 연한 노란색으로 변경 */
-    border-radius: 20px; /* 더 둥근 모양으로 변경 */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* 약간의 그림자 추가 */
-    background-color: #fff; /* 배경색을 흰색으로 변경 */
+    border: 5px solid hsl(37, 91%, 67%);
+    /* 연한 노란색으로 변경 */
+    border-radius: 20px;
+    /* 더 둥근 모양으로 변경 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* 약간의 그림자 추가 */
+    background-color: #fff;
+    /* 배경색을 흰색으로 변경 */
 }
 
 /* FullCalendar의 요일 헤더 스타일링 */
 .fc-day-header {
-    background-color: #fff; /* 배경색을 흰색으로 변경 */
-    color: #333; /* 텍스트 색상을 어두운 회색으로 변경 */
-    font-weight: bold; /* 텍스트의 굵기를 강조 */
-    border: none; /* 테두리 제거 */
+    background-color: #fff;
+    /* 배경색을 흰색으로 변경 */
+    color: #333;
+    /* 텍스트 색상을 어두운 회색으로 변경 */
+    font-weight: bold;
+    /* 텍스트의 굵기를 강조 */
+    border: none;
+    /* 테두리 제거 */
 }
 
 /* FullCalendar의 이벤트 요소 스타일링 */
 .fc-event {
-    background-color: #f8a247; /* 이벤트의 배경색을 노란색으로 변경 */
-    border: none; /* 테두리 제거 */
-    border-radius: 5px; /* 둥근 모양으로 변경 */
-    padding: 4px 8px; /* 내부 여백 조정 */
-    font-size: 14px; /* 텍스트 크기 조정 */
+    background-color: #f8a247;
+    /* 이벤트의 배경색을 노란색으로 변경 */
+    border: none;
+    /* 테두리 제거 */
+    border-radius: 5px;
+    /* 둥근 모양으로 변경 */
+    padding: 4px 8px;
+    /* 내부 여백 조정 */
+    font-size: 14px;
+    /* 텍스트 크기 조정 */
 }
 
 /* FullCalendar의 이벤트 텍스트 스타일링 */
 .fc-event-title {
-    color: #333; /* 텍스트 색상을 어두운 회색으로 변경 */
-    font-weight: bold; /* 텍스트의 굵기를 강조 */
+    color: #333;
+    /* 텍스트 색상을 어두운 회색으로 변경 */
+    font-weight: bold;
+    /* 텍스트의 굵기를 강조 */
 }
 
 /* FullCalendar의 오늘 날짜 스타일링 */
 .fc-day-today {
-    background-color: #f8a247; /* 오늘 날짜의 배경색을 노란색으로 변경 */
+    background-color: #f8a247;
+    /* 오늘 날짜의 배경색을 노란색으로 변경 */
     /* border-radius: 20%; 둥근 모양으로 변경하여 강아지 모양으로 만듭니다. */
-    color: #fff; /* 텍스트 색상을 흰색으로 변경 */
-    font-weight: bold; /* 텍스트의 굵기를 강조 */
+    color: #fff;
+    /* 텍스트 색상을 흰색으로 변경 */
+    font-weight: bold;
+    /* 텍스트의 굵기를 강조 */
 }
 
 /* FullCalendar의 버튼 스타일링 */
 .fc-button {
-    background-color: #ffd700; /* 버튼 배경색을 노란색으로 변경 */
-    color: #333; /* 버튼 텍스트 색상을 어두운 회색으로 변경 */
-    border: none; /* 테두리 제거 */
-    border-radius: 5px; /* 둥근 모양으로 변경 */
-    padding: 8px 12px; /* 내부 여백 조정 */
-    margin: 0 4px; /* 외부 여백 조정 */
-    font-size: 14px; /* 텍스트 크기 조정 */
+    background-color: #ffd700;
+    /* 버튼 배경색을 노란색으로 변경 */
+    color: #333;
+    /* 버튼 텍스트 색상을 어두운 회색으로 변경 */
+    border: none;
+    /* 테두리 제거 */
+    border-radius: 5px;
+    /* 둥근 모양으로 변경 */
+    padding: 8px 12px;
+    /* 내부 여백 조정 */
+    margin: 0 4px;
+    /* 외부 여백 조정 */
+    font-size: 14px;
+    /* 텍스트 크기 조정 */
 }
 
 /* FullCalendar의 오늘 버튼 스타일링 */
 .fc-today-button {
-    background-color: #ffd700; /* 오늘 버튼 배경색을 노란색으로 변경 */
-    color: #333; /* 텍스트 색상을 어두운 회색으로 변경 */
-    border: none; /* 테두리 제거 */
-    border-radius: 5px; /* 둥근 모양으로 변경 */
-    padding: 8px 12px; /* 내부 여백 조정 */
-    margin: 0 4px; /* 외부 여백 조정 */
-    font-size: 14px; /* 텍스트 크기 조정 */
+    background-color: #ffd700;
+    /* 오늘 버튼 배경색을 노란색으로 변경 */
+    color: #333;
+    /* 텍스트 색상을 어두운 회색으로 변경 */
+    border: none;
+    /* 테두리 제거 */
+    border-radius: 5px;
+    /* 둥근 모양으로 변경 */
+    padding: 8px 12px;
+    /* 내부 여백 조정 */
+    margin: 0 4px;
+    /* 외부 여백 조정 */
+    font-size: 14px;
+    /* 텍스트 크기 조정 */
 }
 
+.schedule-modal-content h2 {
+    text-align: center; /* 텍스트를 가운데 정렬합니다. */
+    margin-bottom: 20px; /* 텍스트와 하단 간격을 추가합니다. */
+}
 
+/* 모달 스타일 */
+.schedule-modal {
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.schedule-modal-content {
+    background-color: #fefefe;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 80%;
+    max-height: 80%;
+    overflow: auto;
+    position: relative;
+    text-align: center; /* 텍스트를 가운데 정렬합니다. */
+    margin-bottom: 20px; /* 텍스트와 하단 간격을 추가합니다. */
+}
+
+.schedule-edit,
+.schedule-delete,
+.schedule-close {
+    cursor: pointer;
+    font-size: 20px;
+    color: #dda41d;
+    transition: color 0.3s ease; /* 색상 전환 효과 추가 */
+    display: inline-block;
+    margin-top: 10px;
+    font-weight: bold;
+   
+}
+
+.schedule-edit:hover,
+.schedule-delete:hover,
+.schedule-close:hover {
+    color: #d54949; /* 호버 시 색상 변경 */
+}
+
+.schedule-edit {
+    margin-right: 20px;
+}
+
+.schedule-delete {
+    margin-right: 20px;
+}
+
+.schedule-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
