--- a/src/assets/css/mypage/mypage.css
+++ b/src/assets/css/mypage/mypage.css
@@ -89,6 +89,10 @@
     width: 500px;
     height: 600px;
 }
+#petAddForm .petAddFormUnder img{
+    border: 1px  solid #a7a4a4;
+    
+}
 
 #petAddForm .container .detailBox {
     margin: -20px 0 0 180px;
@@ -344,46 +348,15 @@ datalist {
 }
 
 
-#reviewAddForm .reviewPhoto input {
-    display: none;
-}
 
 #reviewAddForm .pBox1 {
     color: gray;
     font-size: 14px;
 }
 
-/* 사진첨부 미리보기 */
-#reviewAddForm .reviewPhoto .photoBox {
-    width: 1000px;
-    display: flex;
-    justify-content: space-between;
-}
-
-#reviewAddForm .reviewPhoto #photoBox2 {
-    width: 230px;
-    height: 230px;
-    border: 1px solid #a7a4a4;
-    margin-top: 5px;
-    margin-bottom: 10px;
-}
-
-#reviewAddForm .pBox2 {
-    color: gray;
-    font-size: 14px;
-}
-
-#reviewAddForm .reviewPhoto .input-file-button {
-    padding: 6px 25px;
-    background-color: white;
-    border: 1px solid #a7a4a4;
-    border-radius: 3px;
-    cursor: pointer;
-    font-size: 30px;
-}
-
 #reviewAddForm .submitBtn {
     text-align: center;
+    margin-top: 100px;
 }
 
 #reviewAddForm .submitBtn button {
@@ -397,6 +370,132 @@ datalist {
     font-size: 18px;
     cursor: pointer;
 }
+
+
+
+
+/* *********************************************************** */
+/* 알림장 */
+/* Mydiary */
+#myDiary {
+    width: 1200px;
+    margin: 0 auto;
+    /* background-color: red; */
+}
+
+#myDiary .title {
+    display: flex;
+}
+
+#myDiary h1 {
+    font-size: 30px;
+    /* width: 1400px; */
+    /* border-bottom: 1px solid black; */
+    margin: 20px 20px 0 20px;
+}
+
+#myDiary .title .searchBox {
+    width: 1260px;
+    text-align: right;
+    padding-top: 20px;
+}
+
+#myDiary .title .search-input {
+    width: 250px;
+    height: 50px;
+}
+
+#myDiary .title .searchBox button {
+    margin-left: 5px;
+    width: 80px;
+    padding: 14px;
+    border: 2px solid #cac6c6;
+    cursor: pointer;
+    border-radius: 12px;
+}
+
+#myDiary .dateLook {
+    border-top: 1px solid #a7a4a4;
+    margin: 20px 0 40px 0;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    padding-top: 30px;
+}
+
+#myDiary .myDiary02 {
+    display: flex;
+    background-color: #236C3F;
+    padding: 20px;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-bottom: 100px;
+}
+
+#myDiary .myDiary02 .petProfile {
+    background-color: white;
+    border-radius: 20px;
+    font-size: 20px;
+}
+
+#myDiary .myDiary02 .petProfile p:last-child {
+    margin-top: 15px;
+    padding-left: 30px;
+}
+
+#myDiary .myDiary02 .petProfile .store {
+    padding-top: 25px;
+    padding-left: 25px;
+}
+
+#myDiary .myDiary02 .petProfile .date {
+    padding: 25px;
+}
+
+#myDiary .myDiary02 .petProfile .petName {
+    padding-left: 25px;
+}
+
+#myDiary .myDiary02 .petProfile img {
+    width: 600px;
+    height: 500px;
+    border-radius: 20px;
+    margin: 20px;
+}
+
+
+#myDiary .myDiary02 .context {
+    width: 700px;
+    margin-left: 30px;
+    border-radius: 20px;
+    background-color: white;
+    font-size: 20px;
+    padding: 25px;
+}
+
+#myDiary .myDiary02 .context .weight {
+    margin-top: 60px;
+}
+
+#myDiary .myDiary02 .context p {
+    margin-left: 20px;
+}
+
+#myDiary .myDiary02 .context p:first-child {
+    font-weight: bold;
+}
+
+#myDiary .myDiary02 .context p:last-child {
+    border-bottom: 1px dashed #236C3F;
+    padding-bottom: 10px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding-left: 30px;
+}
+
+
+
+
 
 
 /* ****************************************************** */
