--- a/src/assets/css/potal/signup.css
+++ b/src/assets/css/potal/signup.css
@@ -11,7 +11,7 @@
 
 #signup-container  .signup-box {
     margin: 50px 0 20px 0;
-    width: 450px;
+    width: 500px;
     padding: 60px;
     background-color: white;
     border-radius: 10px;
@@ -33,20 +33,20 @@
 .form-group.preview-image{
     width: 200px;
     height: 200px;
-    margin: 0 auto;
+    margin: 0 auto 40px;
     position: relative;
-    border-radius: 50%;
-    overflow: hidden;
+    /* border-radius: 50%; */
+    /* overflow: hidden; */
 }
 /* 미리보기 이미지 */
 #preview-pimage{
     width: 200px;
     height: 200px;
-    object-fit: contain;
+    object-fit: cover;
     background: url('@/assets/images/icon_camera.png') no-repeat center;
     background-size: 50%;
-    margin-bottom: 50px;
-    /* border: none; */
+    /* margin-bottom: 50px; */
+    border: none;
     border-radius: 50%;
 }
 /* 파일대신 버튼 */
@@ -58,7 +58,8 @@
     height: 100%;
     cursor: pointer; /* 포인터 커서로 변경하여 클릭 가능한 것처럼 보이게 함 */
     z-index: 1; /* 이미지 위에 올라오도록 함 */
-    border: 1px solid green;
+    border: 1px solid #ccc;
+    border-radius: 50%;
 }
 /* 파일버튼 */
 .form-group input[type="file"].upload-hidden {
@@ -74,47 +75,46 @@
     width: 270px;
     position: relative;
 }
-
-.form-group:nth-child(2),
-.form-group:nth-child(5) {
+.form-group:nth-child(3)  {
     margin-bottom: 10px;
 }
 
 .form-group input {
-    width: calc(100% - 40px);
+    /* width: calc(100% - 40px); */
+    width: 270px;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     display: inline-block;
 }
 
-.input-container {
+.signup-form .input-container {
     display: flex;
-    width: 320px;
+    width: 380px;
     align-items: center;
+    justify-content: space-between;
 }
 
-.input-container input {
-    flex: 1;
+.signup-form .input-container input {
+    /* flex: 1; */
 }
 
-.small-btn {
-    width: 80px;
+.signup-form .small-btn {
+    width: 100px;
     padding: 10px;
     border: none;
-    background-color: #236C3F;
     color: white;
     border-radius: 5px;
     cursor: pointer;
-    margin-left: 10px;
+    /* margin-left: 10px; */
 }
 
-.green-btn {
+.signup-form .green-btn {
     background-color: #4CAF50;
 }
 
 .signupBtn {
-    width: 320px;
+    width: 380px;
     padding: 15px;
     background-color: #236C3F;
     color: white;
@@ -122,11 +122,15 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-top: 10px;
+    margin-top: 30px;
+}
+.signupBtn:hover{
+    background-color: #1d5e35;
 }
 
-.google_recaptha{
-    width: 330px;
+#google_recaptha{
+    width: 380px;
+    margin-top: 20px;
 }
 
 .error-message {
@@ -135,14 +139,14 @@
 }
 
 .success-message {
-    color: blue;
+    color: #236C3F;
     font-size: 12px;
 }
 
 .signup-footer-ul {
     list-style: none;
     padding: 0;
-    margin: 20px 0 10px 0;
+    margin: 30px 0 10px 0;
     font-size: 14px;
 }
 
