--- a/src/assets/css/potal/main.css
+++ b/src/assets/css/potal/main.css
@@ -1,121 +1,143 @@
-.main-map{
-    margin: 20px 20px 20px 20px;
-  }
-  
-  .fa-map-marker-alt {
-    position: absolute;
-    right: 13px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #ccc;
-    font-size: 25px;
-  }
-  
-  .search-input-wrapper {
-    position: relative;
-    /* 자식 요소의 위치를 상대적으로 설정 */
-    width: 400px;
-    /* 인풋 너비 지정 */
-  }
-  
-  #potal-main-container {
-    width: 1400px;
-    margin: 0 auto;
-    text-align: left;
-  }
-  
-  #potal-main-container h2 {
-    margin-left: 20px;
-    margin-top: 60px;
-    margin-bottom: 10px;
-  }
-  
-  #potal-main-container hr {
-    margin-left: 20px;
-  }
-  
-  .potal-main-slide,
-  .main-slide {
-    width: 100%;
-    height: 600px;
-  }
-  
-  .search-container {
-    margin-left: 20px;
-    margin-top: 40px;
-    display: flex;
-    align-items: left;
-    justify-content: left;
-    margin-bottom: 20px;
-  }
-  
-  .search-input {
-    width: 100%;
-    /* 인풋 너비 100%로 지정 */
-    padding: 12px;
-    border: 2px solid #ccc;
-    border-radius: 15px;
-    outline: none;
-    font-size: 16px;
-    padding-right: 40px;
-    /* 오른쪽 패딩은 아이콘의 너비만큼 */
-  }
-  
-  .search-button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 12px 24px;
-    border-radius: 15px;
-    cursor: pointer;
-    margin-left: 10px;
-    font-size: 16px;
-  }
-  
-  .main-map {
-    margin: 30px 20px 10px 20px;
-  }
-  
-  .main-map img {
-    width: 1360px;
-    height: 400px;
-  }
-  
-  .rank {
-    display: flex;
-    justify-content: flex-start;
-    margin: 20px 0 20px 25px;
-    width: 1400px;
-    flex-wrap: wrap;
-  }
-  
-  .rank-item {
-    margin-right: 20px;
-  }
-  
-  .rank-item img {
-    width: 250px;
-    height: 250px;
-    margin-right: 10px;
-    object-fit: cover;
-    /* 정사각형으로 자르기 */
-  }
-  
-  .rank-item label {
-    display: block;
-    text-align: center;
-    font-weight: bold;
-    /* 글씨를 굵게 설정 */
-    margin-top: 5px;
-    margin-bottom: 10px
-  }
-  
-  .event-banner {
-    width: 1370px;
-    height: 350px;
-    margin: 80px 0 40px 25px;
-  }
-  
-  #AppFooter {
-    margin-top: 80px;
-  }
+.main-map {
+  margin: 20px 20px 20px 20px;
+}
+
+.fa-map-marker-alt {
+  position: absolute;
+  right: 13px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #ccc;
+  font-size: 25px;
+}
+
+.search-input-wrapper {
+  position: relative;
+  /* 자식 요소의 위치를 상대적으로 설정 */
+  width: 400px;
+  /* 인풋 너비 지정 */
+}
+
+#potal-main-container {
+  width: 1400px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+#potal-main-container h2 {
+  margin-left: 20px;
+  margin-top: 60px;
+  margin-bottom: 10px;
+}
+
+#potal-main-container hr {
+  margin-left: 20px;
+}
+
+.potal-main-slide,
+.main-slide {
+  width: 100%;
+  height: 600px;
+}
+
+.search-container {
+  margin-left: 20px;
+  margin-top: 40px;
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  width: 100%;
+  /* 인풋 너비 100%로 지정 */
+  padding: 12px;
+  border: 2px solid #ccc;
+  border-radius: 15px;
+  outline: none;
+  font-size: 16px;
+  padding-right: 40px;
+}
+
+.search-button {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 15px;
+  cursor: pointer;
+  margin-left: 10px;
+  font-size: 16px;
+}
+
+.main-map {
+  margin: 30px 20px 10px 20px;
+}
+
+.main-map img {
+  width: 1360px;
+  height: 400px;
+}
+
+.rank {
+  display: flex;
+  justify-content: flex-start;
+  margin: 20px 0 20px 25px;
+  width: 1400px;
+  flex-wrap: wrap;
+}
+
+.rank-item {
+  margin-right: 20px;
+}
+
+.rank-item img {
+  width: 250px;
+  height: 250px;
+  margin-right: 10px;
+  object-fit: cover;
+}
+
+.rank-item label {
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  /* 글씨를 굵게 설정 */
+  margin-top: 5px;
+  margin-bottom: 10px
+}
+
+.event-banner {
+  width: 1370px;
+  height: 350px;
+  margin: 80px 0 40px 25px;
+}
+
+#AppFooter {
+  margin-top: 80px;
+}
+
+
+.search_ul {
+  position: absolute;
+  z-index: 1000;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.1); /* 테두리 추가 */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 그림자 효과 추가 */
+  width: calc(100% - 2px);
+  max-height: 200px;
+  overflow-y: auto;
+  scrollbar-width: none;
+  padding-left: 10px;
+}
+
+.search_ul::-webkit-scrollbar {
+  display: none; /* WebKit 기반 브라우저에서 스크롤바 숨기기 */
+}
+
+.search_ul li {
+  cursor: pointer;
+  margin-top: 10px; /* 위쪽 간격 조정 */
+}
+
