--- a/src/assets/css/edit/editform.css
+++ b/src/assets/css/edit/editform.css
@@ -1,37 +1,65 @@
 /* 편집 페이지 */
 
 /* 타이틀 */
-.container2{}
-.container2 .eTitle{
+.container3{
+    width: 1500px;
+    margin: 0 auto;
+    /* background-color: greenyellow; */
+}
+.container3 .eTitle{
     margin: 50px auto;
-    display: flex;
-    flex-direction: column;
     width: 500px;
 }
-.container2 .eTitle input:first-child{
-    font-size: 50px;
+.container3 .eTitle input:first-child{
+    font-size: 40px;
     margin-bottom: 10px;
+    padding: 10px;
+    width: 500px;
 }
-.container2 .eTitle input:last-child{
-    font-size: 23px;
+.container3 .eTitle input:last-child{
+    font-size: 20px;
+    padding: 10px;
+    width: 500px;
 }
 
-/* 이미지 슬라이드 */
-.container2 .eFileAddBtn{
-    
+/* 이미지 슬라이드 첨부파일*/
+.container3 .eSlideImgContainer h1{
+    /* margin-bottom: 30px; */
+    border-bottom: 1px solid #ddd;
+    /* background-color: darkorchid; */
+    padding-bottom: 10px ;
 }
-.container2 .eImgSlide{}
-.container2 .eImgSlide img{
+.container3 .eSlideImgContainer .eSlideImgInfo{
+    display: flex;
+    padding: 10px 0 5px;
+}
+.container3 .eSlideImgContainer .eSlideImgInfo .eFileAddBtn{
+    padding-left: 15px;
+    width: 230px;
+}
+.container3 .eSlideImgContainer .eSlideImgInfo p{
+    color: #808080;
+    padding-bottom: 10px;
+}
+
+
+.container3 .eSlideImgContainer #att_zone.addImgBox{
     width: 100%;
+    height: 240px;
+    padding: 15px;
+    border: 1px dotted #999;
+    border-radius: 20px;
+    margin-top: 0;
 }
+
 
 /* ===================== 중간 내용부분 ===================== */
 
 .eMidContainer{
     padding: 70px 0;
     /* background-color: cornflowerblue; */
-    width: 1500px;
-    margin: 0 auto;
+    /* width: 1500px; */
+    /* margin: 0 auto; */
 }
 
 /* ============= 미용사진 ============= */
