--- a/src/assets/css/potal/msignup.css
+++ b/src/assets/css/potal/msignup.css
@@ -112,3 +112,39 @@
     color: blue;
     font-size: 12px;
 }
+
+/* 모달 스타일 */
+.duplicateModal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.msignup-modal-content {
+    background-color: #fefefe;
+    margin: 20% auto;
+    padding: 30px 20px 30px 20px;
+    border: 1px solid #888;
+    border-radius: 10px; /* 테두리를 둥글게 만듦 */
+    width: 400px;
+    height: 140px;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* 그림자 효과 추가 */
+}
+
+
+.msignup-modal-content span {
+    display: block; /* 텍스트를 블록 요소로 설정하여 줄 바꿈되도록 함 */
+    margin-bottom: 20px; /* 텍스트 아래 여백 추가 */
+}
+
+.msignup-modal-content button {
+    background-color: #236C3F; /* 버튼 배경색 */
+    color: white; /* 버튼 텍스트 색상 */
+    padding: 10px 20px; /* 버튼 내부 여백 */
+    border: none; /* 테두리 없음 */
+    border-radius: 5px; /* 버튼 모서리를 둥글게 만듦 */
+    cursor: pointer; /* 커서를 포인터로 변경 */
+}
