--- a/src/assets/css/potal/search.css
+++ b/src/assets/css/potal/search.css
@@ -1,207 +1,209 @@
 #potal-search-container {
-    width: 1400px;
-    margin: 0 auto;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    text-align: center;
-  }
-  
-  .search-search-container {
-    margin-left: 20px;
-    margin-top: 40px;
-    display: flex;
-  }
-  
-  .search-input-search {
-    width: 400px;
-    padding: 12px;
-    border: 2px solid #ccc;
-    border-radius: 15px;
-    outline: none;
-    font-size: 16px;
-    padding-right: 40px;
-    height: 45px;
-  }
-  
-  .search-button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 12px 24px;
-    border-radius: 15px;
-    cursor: pointer;
-    margin-left: 10px;
-    font-size: 16px;
-    height: 45px;
-  }
-  
-  .location-box {
-    margin-right: 20px;
-  }
-  
-  .search-category {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 25px 20px 20px 40px;
-    position: relative;
-    background-color: #236C3F;
-    text-align: center;
-    color: white;
-  }
-  
-  .city-list {
-    list-style: none;
-    padding: 10px;
-    margin: 0;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-  }
-  
-  .city-list li {
-    margin-right: 10px;
-    cursor: pointer;
-    padding: 10px 25px;
-    position: relative;
-  }
-  
-  .city-list li.selected {
-    background-color: #9bd89d;
-    border-radius: 20px;
-  }
-  
-  .city-list li span {
-    cursor: pointer;
-    margin-left: 10px;
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  
-  .location-box div {
-    font-size: 20px;
-    margin-bottom: 5px;
-  }
-  
-  .cancel-btn {
-    font-size: 12px;
-    padding: 5px;
-    background-color: #9bd89d;
-    border: none;
-  }
-  
-  .lcancel-btn {
-    font-size: 12px;
-    padding: 5px;
-    background-color: #9bd89d;
-    border: none;
-  }
-  
-  .selected-items {
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 20px;
-    cursor: pointer;
-  }
-  
-  .selected-item {
-    background-color: #9bd89d;
-    border-radius: 20px;
-    padding: 8px 12px;
-    margin: 5px;
-  }
-  
-  .selected-item span {
-    margin-left: 5px;
-    cursor: pointer;
-  }
-  
-  .bottom {
-    margin: 20px 10px 20px 20px;
-    position: relative;
-  }
-  
-  .search-result {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 20px 0 15px 0px;
-  }
-  
-  .search-item {
-    margin-right: 20px;
-  }
-  
-  .search-item .list_img {
-    width: 250px;
-    height: 250px;
-    margin-right: 10px;
-    object-fit: cover;
-  }
-  
-  .search-item label {
-    display: block;
-    text-align: center;
-    margin-top: 5px;
-    margin-bottom: 10px
-  }
-  
-  .search-category {
-    display: flex;
-    align-items: center;
-    position: relative;
-  }
-  
-  .search-table {
-    margin: 20px 0 0 20px;
-    border-collapse: collapse;
-    padding-left: 20px;
-    border: 1px solid #d6d6d6;
-  }
-  
-  .search-table .search-location {
-    background-color: #9bd89d;
-  }
-  
-  .result-h2 {
-    text-align: left;
-    margin: 50px 0 15px 0;
-  }
+  width: 1400px;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  text-align: center;
+}
 
-  .rank-search {
-    display: flex;
-    justify-content: flex-start;
-    width: 1400px;
-  }
+.search-search-container {
+  margin-left: 20px;
+  margin-top: 40px;
+  display: flex;
+}
 
-  .yellowStar_list,
-  .grayStar_list {
-    width: 20px; 
-    height: 20px; 
-  }
-  
-  .star-container {
-    display: flex; 
-    justify-content: center; 
-    align-items: center;
-    flex-direction: row; /* 가로 방향으로 배치 */
-  }
-  
-  .star_list {
-    display: flex; 
-  }
+.search-input-search {
+  width: 400px;
+  padding: 12px;
+  border: 2px solid #ccc;
+  border-radius: 15px;
+  outline: none;
+  font-size: 16px;
+  padding-right: 40px;
+  height: 45px;
+}
 
-  .result-h2 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  .view-count {
-    font-size: 0.7em;
-    color: #666;
-    margin-right: 20px;
-  }
-  
+.search-button {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 12px 24px;
+  border-radius: 15px;
+  cursor: pointer;
+  margin-left: 10px;
+  font-size: 16px;
+  height: 45px;
+}
+
+.location-box {
+  margin-right: 20px;
+}
+
+.search-category {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 25px 20px 20px 40px;
+  position: relative;
+  background-color: #236C3F;
+  text-align: center;
+  color: white;
+}
+
+.city-list {
+  list-style: none;
+  padding: 10px;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.city-list li {
+  margin-right: 10px;
+  cursor: pointer;
+  padding: 10px 25px;
+  position: relative;
+}
+
+.city-list li.selected {
+  background-color: #9bd89d;
+  border-radius: 20px;
+}
+
+.city-list li span {
+  cursor: pointer;
+  margin-left: 10px;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.location-box div {
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+
+.cancel-btn {
+  font-size: 12px;
+  padding: 5px;
+  background-color: #9bd89d;
+  border: none;
+}
+
+.lcancel-btn {
+  font-size: 12px;
+  padding: 5px;
+  background-color: #9bd89d;
+  border: none;
+}
+
+.selected-items {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.selected-item {
+  background-color: #9bd89d;
+  border-radius: 20px;
+  padding: 8px 12px;
+  margin: 5px;
+}
+
+.selected-item span {
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.bottom {
+  margin: 20px 10px 20px 20px;
+  width: 1400px;
+  position: relative;
+}
+
+.search-result {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0 15px 0px;
+}
+
+.search-item {
+  margin-right: 20px;
+}
+
+.search-item .list_img {
+  width: 250px;
+  height: 250px;
+  margin-right: 10px;
+  object-fit: cover;
+}
+
+.search-item label {
+  display: block;
+  text-align: center;
+  margin-top: 5px;
+  margin-bottom: 10px
+}
+
+.search-category {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.search-table {
+  margin: 20px 0 0 20px;
+  border-collapse: collapse;
+  padding-left: 20px;
+  border: 1px solid #d6d6d6;
+}
+
+.search-table .search-location {
+  background-color: #9bd89d;
+}
+
+.result-h2 {
+  text-align: left;
+  margin: 50px 0 15px 0;
+}
+
+.rank-search {
+  display: flex;
+  justify-content: flex-start;
+  width: 1400px;
+  flex-wrap: wrap;
+}
+
+.yellowStar_list,
+.grayStar_list {
+  width: 20px;
+  height: 20px;
+}
+
+.star-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  /* 가로 방향으로 배치 */
+}
+
+.star_list {
+  display: flex;
+}
+
+.result-h2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.view-count {
+  font-size: 0.6em;
+  color: #666;
+  margin-right: 20px;
+}
