--- a/src/assets/css/edit/editform.css
+++ b/src/assets/css/edit/editform.css
@@ -22,28 +22,40 @@
     width: 500px;
 }
 
-/* 이미지 슬라이드 첨부파일*/
+
+
+
+/* ===================== 내용부분 ===================== */
+
+.eMidContainer{
+    padding: 30px 0 70px;
+    /* background-color: cornflowerblue; */
+}
+
+/* ============= 이미지 슬라이드 첨부파일 =============  */
+.container3 .eSlideImgContainer{
+    margin-bottom: 70px;
+}
 .container3 .eSlideImgContainer h1{
-    /* margin-bottom: 30px; */
+    margin-bottom: 30px;
     border-bottom: 1px solid #ddd;
-    /* background-color: darkorchid; */
     padding-bottom: 10px ;
 }
-.container3 .eSlideImgContainer .eSlideImgInfo{
+.eMidContainer .eSlideImgContainer .eSlideImgInfo{
     display: flex;
     padding: 10px 0 5px;
 }
-.container3 .eSlideImgContainer .eSlideImgInfo .eFileAddBtn{
+.eMidContainer.eSlideImgContainer .eSlideImgInfo .eFileAddBtn{
     padding-left: 15px;
     width: 230px;
 }
-.container3 .eSlideImgContainer .eSlideImgInfo p{
+.eMidContainer .eSlideImgContainer .eSlideImgInfo p{
     color: #808080;
     padding-bottom: 10px;
 }
 
 
-.container3 .eSlideImgContainer #att_zone.addImgBox{
+.eMidContainer .eSlideImgContainer #att_zone.addImgBox{
     width: 100%;
     height: 240px;
     padding: 15px;
@@ -52,37 +64,33 @@
     margin-top: 0;
 }
 
-
-/* ===================== 중간 내용부분 ===================== */
-
-.eMidContainer{
-    padding: 70px 0;
-    /* background-color: cornflowerblue; */
-    /* width: 1500px; */
-    /* margin: 0 auto; */
-}
-
-/* ============= 미용사진 ============= */
+/* ============= 미용사진 슬라이드 첨부파일 ============= */
 .eMidContainer .eCutImgContainer{
     /* background-color: sandybrown; */
     margin-bottom: 70px;
 }
 .eMidContainer .eCutImgContainer h1{
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
     /* background-color: darkorchid; */
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px ;
 }
-.eMidContainer .eCutImgContainer .eCutSlide{
-    overflow: hidden;
-    width: 1500px;
-    white-space: nowrap ;
+.eMidContainer .eCutImgContainer .eCutSlideImgInfo{
+    display: flex;
+    padding: 10px 0 5px;
 }
-.eMidContainer .eCutImgContainer .eCutSlide img{
-    width: 250px;
-    height: 250px;
-    object-fit: cover;
-    margin-right: 20px;
+.eMidContainer .eCutImgContainer .eCutSlideImgInfo p{
+    color: #808080;
+    padding-bottom: 10px;
+}
+.eMidContainer .eCutImgContainer #att_zone2.addcImgBox{
+    width: 100%;
+    height: 240px;
+    padding: 15px;
+    border: 1px dotted #999;
+    border-radius: 20px;
+    margin-top: 0;
+    overflow-x: scroll;
 }
 
 /*============= 디자이너 소개 =============*/
@@ -112,23 +120,35 @@
     width: 350px;
     height: 350px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h2{
-    margin-bottom: 20px;
+
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox label{
+    margin-right: 10px;
+    width: 50px;
+    font-weight: bold;
+    padding-top: 10px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox h3{
-    background-color: #222;
-    color: #fff;
-    border-radius: 10px;
-    padding: 7px 10px;
-    width: 60px;
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox input[type="text"]{
+    margin-bottom: 10px;
+    font-size: 18px;
+    padding: 10px;
+    width: 300px;
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox p{
-    margin: 7px;
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eNameBox{
+    display: flex;
+}
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eJobBox{
+    display: flex;
 }
 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox{
-    /* background-color: #fff;
-    border-radius: 15px;
-    padding: 10px; */
+    display: flex;
+}
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .eDLeftBox .eCareerBox .eCareerBoxInfo{
+    width: 300px;
+    height: 200px;
+    resize: none;
+    line-height: 20px;
+    padding: 10px;
+    font-size: 16px;
 }
 
 /* 디자이너소개 오른쪽 */
@@ -136,11 +156,16 @@
     width: 400px;
     height: 400px;
     /* background-color: #ddd; */
+    
 }
-.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox img{
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3{
     width: 400px;
     height: 400px;
     object-fit: contain;
+    border: 1px dotted #808080;
+    background-color: #fff;
+    background: url('@/assets/images/plus.png') no-repeat center ;
+    background-size: 50%;
 }
 
 /*============= 가격 + 후기 =============*/
