--- a/src/assets/css/edit/editform.css
+++ b/src/assets/css/edit/editform.css
@@ -85,12 +85,13 @@
 }
 .eMidContainer .eCutImgContainer #att_zone2.addcImgBox{
     width: 100%;
-    height: 240px;
+    height: 259px;
     padding: 15px;
     border: 1px dotted #999;
     border-radius: 20px;
     margin-top: 0;
     overflow-x: scroll;
+    white-space: nowrap;
 }
 
 /*============= 디자이너 소개 =============*/
@@ -155,7 +156,7 @@
 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox {
     width: 400px;
     height: 400px;
-    /* background-color: #ddd; */
+    background-color: #fff;
     
 }
 .eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3{
@@ -167,7 +168,15 @@
     background: url('@/assets/images/plus.png') no-repeat center ;
     background-size: 50%;
 }
+/* 파일이 첨부되었을 때 배경 이미지 숨기기 */
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3.file-attached {
+    background: none; /* 배경 이미지 제거 */
+}
 
+/* 파일이 첨부되었을 때 이미지 보이기 */
+.eMidContainer .eDesignerSlideContainer .eDesignerContentsBox .edRightBox #att_zone3.file-attached img {
+    display: block; /* 이미지 보이기 */
+}
 /*============= 가격 + 후기 =============*/
 .eMidContainer .ePriceReviewContainer{
     display: flex;
