--- a/src/assets/css/potal/mlogin.css
+++ b/src/assets/css/potal/mlogin.css
@@ -1,5 +1,10 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css');
 
+#wrap {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 #mlogin-container {
     width: 100%;
     margin: 0 auto;
